feat(#12): sidebar list 구현

--- a/apps/web/src/app/global.css
+++ b/apps/web/src/app/global.css
@@ -410,4 +410,13 @@ summary svg {
   #middle-content {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+  /* 스크롤 기능은 유지하면서 스크롤바 숨김 */
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE, Edge */
+    scrollbar-width: none;     /* Firefox */
+  }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;             /* Chrome, Safari */
+  }
 }
